--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
